--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.57.4",
 		"@tailwindcss/vite": "^4.1.13",
 		"tailwindcss": "^4.1.13"
 	}
