--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@lucia-auth/adapter-sqlite": "^3.0.2",
 		"@supabase/supabase-js": "^2.57.4",
 		"@tailwindcss/vite": "^4.1.13",
+		"lucia": "^3.2.2",
 		"tailwindcss": "^4.1.13"
 	}
 }
